--- a/Test.css
+++ b/Test.css
@@ -6984,7 +6984,7 @@ html:only-child > head + body div.app_b1f720 > div.app_de4237 > div.layers__1c91
 	position: relative !important;
 }
 html:only-child > head + body div.app_b1f720 > div.app_de4237 > div.layers__1c917.layers_a23c37 > div.layer__2efaa.baseLayer__8fda3 + div.layer__2efaa > div.standardSidebarView__1129a > div.sidebarRegion__60457 > div.sidebarRegionScroller__1fa7e.thin_b1c063.scrollerBase_dc3aa9.fade_ba0fa0 > nav.sidebar__9e3e2 > div.side_b4b3f6 > div.info__755e1::after {
-	content: "I'm Iron Man"
+	content: "I'm Iron Man" !important;
 	font-size: 12px !important;
 	color: var(--text-muted) !important;
 	cursor: pointer !important;
