--- a/Test.css
+++ b/Test.css
@@ -187,7 +187,7 @@
 	--dplus-spacing-app: 10px;
 
 	/* Wordmark (Windows only) */
-	--dplus-wordmark: url(https://i.imgur.com/Iisr0mk.png)
+	--dplus-wordmark: url(https://i.imgur.com/BEYjW9s.png)
 
 	/* Icons */
 	--dplus-icon-home-dark: url(https://plusinsta.github.io/discord-plus/assets/discord/home_dark.svg);
