--- a/Test.css
+++ b/Test.css
@@ -190,7 +190,7 @@
 	--dplus-wordmark: url(https://i.imgur.com/jzSuHIj.png)
 
 	/* Icons */
-	--dplus-icon-home-dark: url(https://plusinsta.github.io/discord-plus/assets/discord/home_dark.svg);
+	--dplus-icon-home-dark: url(https://i.imgur.com/jzSuHIj.png);
 	--dplus-icon-home-light: url(https://plusinsta.github.io/discord-plus/assets/discord/home_light.svg);
 
 	/* Icon sizes*/
